# ros2_android

./: .gitignore  CMakeLists.txt  Makefile  README.md  dependencies.cmake  flake.nix  gradle.properties  ros.repos  settings.gradle.kts
android_patches/: ydlidar_sdk_android_support.patch
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/github/mowerick/ros2/android/: BufferedUsbSerialPort.kt  GpsManager.kt  MainActivity.kt  NativeBridge.kt  UsbDeviceManager.kt  UsbSerialBridge.kt  UsbSerialManager.kt
app/src/main/kotlin/com/github/mowerick/ros2/android/model/: CameraInfo.kt  ExternalDeviceInfo.kt  PipelineState.kt  SensorInfo.kt  SensorReading.kt  SensorType.kt
app/src/main/kotlin/com/github/mowerick/ros2/android/ui/components/: CollapsibleCard.kt  CopyableTextCard.kt  TopicConnector.kt  TopicInfoCard.kt
app/src/main/kotlin/com/github/mowerick/ros2/android/ui/screens/: BeetlePredatorScreen.kt  BuiltInSensorsScreen.kt  CameraDetailScreen.kt  DashboardScreen.kt  ExternalSensorsScreen.kt  FullscreenDebugVisualizationScreen.kt  LidarDetailScreen.kt  NodeDetailScreen.kt  PerceptionScreen.kt  RosSetupScreen.kt  SensorDetailScreen.kt  SensorListScreen.kt  SubsystemScreen.kt
app/src/main/kotlin/com/github/mowerick/ros2/android/util/: BufferedUsbSerialPort.kt  CircularByteBuffer.kt  DeviceIdUtil.kt  NativeBridge.kt  UsbSerialBridge.kt
app/src/main/kotlin/com/github/mowerick/ros2/android/viewmodel/: RosViewModel.kt
app/src/main/kotlin/com/github/mowerick/ros2/android/viewmodel/managers/: BeetlePredatorManager.kt  ExternalDeviceManager.kt  GpsManager.kt  NavigationManager.kt  PerceptionManager.kt  PipelineStateMachine.kt  RosLifecycleManager.kt  SensorCameraManager.kt  UsbSerialManager.kt
app/src/main/kotlin/com/github/sloretz/sensors_for_ros/: MainActivity.kt  NativeBridge.kt
app/src/main/kotlin/com/github/sloretz/sensors_for_ros/model/: CameraInfo.kt  SensorInfo.kt  SensorReading.kt
app/src/main/kotlin/com/github/sloretz/sensors_for_ros/ui/components/: NumericKeypad.kt  TopicInfoCard.kt
app/src/main/kotlin/com/github/sloretz/sensors_for_ros/ui/screens/: CameraDetailScreen.kt  DomainIdScreen.kt  SensorDetailScreen.kt  SensorListScreen.kt
app/src/main/kotlin/com/github/sloretz/sensors_for_ros/ui/theme/: Theme.kt
app/src/main/kotlin/com/github/sloretz/sensors_for_ros/viewmodel/: RosViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml
docs/: YDLIDAR_INTEGRATION.md  camera-optimization-implementation.md  hybrid_restructuring_notes.md
rcl_android_log/: CMakeLists.txt  package.xml
rcl_android_log/src/: rcl_android_log.c
scripts/tests/: perception_rviz_markers.py
scripts/tests/object_detection/: README.md  perception_rviz_markers.py
scripts/tests/sensors/: README.md  requirements.txt  sensor_test.py
scripts/tests/sensors/visualizers/: __init__.py  accelerometer.py  barometer.py  camera.py  gps.py  gyroscope.py  illuminance.py  magnetometer.py  matplotlib_config.py
src/: CMakeLists.txt  events.h  gui.cc  gui.h  jni_bridge.cc  jvm.cc  jvm.h  sensor_data_provider.h  sensors.cc  sensors.h
src/beetle_predator/controllers/: beetle_predator_controller.cc  beetle_predator_controller.h
src/camera/: camera_manager.cc  camera_manager.h
src/camera/base/: camera_descriptor.cc  camera_descriptor.h  camera_device.cc  camera_device.h
src/camera/controllers/: camera_controller.cc  camera_controller.h
src/controllers/: accelerometer_sensor_controller.cc  accelerometer_sensor_controller.h  barometer_sensor_controller.cc  barometer_sensor_controller.h  camera_controller.cc  camera_controller.h  gyroscope_sensor_controller.cc  gyroscope_sensor_controller.h  illuminance_sensor_controller.cc  illuminance_sensor_controller.h  magnetometer_sensor_controller.cc  magnetometer_sensor_controller.h  ros_domain_id_controller.cc  ros_domain_id_controller.h
src/core/: camera_frame_callback_queue.h  sensor_data_callback_queue.h  time_utils.cc  time_utils.h
src/gps/base/: gps_location_provider.cc  gps_location_provider.h
src/gps/controllers/: gps_controller.cc  gps_controller.h
src/jni/: bitmap_utils.cc  bitmap_utils.h  jni_bridge.cc  jni_object_utils.cc  jni_object_utils.h  jvm.cc  jvm.h
src/lidar/base/: lidar_device.h
src/lidar/controllers/: lidar_controller.cc  lidar_controller.h
src/lidar/impl/: ydlidar_device.cc  ydlidar_device.h
src/perception/controllers/: perception_controller.cc  perception_controller.h
src/ros/: ros_interface.cc  ros_interface.h
src/sensors/base/: sensor.cc  sensor_data_provider.h
src/sensors/controllers/: accelerometer_sensor_controller.cc  accelerometer_sensor_controller.h  barometer_sensor_controller.cc  barometer_sensor_controller.h  gps_location_sensor_controller.cc  gps_location_sensor_controller.h  gyroscope_sensor_controller.cc  gyroscope_sensor_controller.h  illuminance_sensor_controller.cc  illuminance_sensor_controller.h  magnetometer_sensor_controller.cc  magnetometer_sensor_controller.h
src/sensors/impl/: accelerometer_sensor.cc  barometer_sensor.cc  gps_location_sensor.cc  gps_location_sensor.h  gyroscope_sensor.cc  illuminance_sensor.cc  magnetometer_sensor.cc
src/targeting/controllers/: target_manager_controller.cc  target_manager_controller.h
